# habr-scraper

./: README.md  pyproject.toml  setup.cfg
app/: __init__.py  main.py  parser.py  scraper.py  settings.py  utils.py
test_data/: article.html  article_text_fragments.json  article_urls.json  habr.html  image_urls.json
tests/: conftest.py  test_app.py  test_parser.py  test_scraper.py
