[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["Aidar Garikhanov <a1d4r@yandex.ru>"]
readme = "README.md"

[tool.poetry.scripts]
scraper = "app.main:app"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
typer = "^0.3.2"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
unify = "^0.5"
flake8 = "^3.8.4"
pylint = "^2.7.1"
mypy = "^0.812"
pytest-deadfixtures = "^2.2.1"
jupyter = "^1.0.0"
requests-mock = "^1.8.0"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
